--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^9.0.4",
     "@tailwindcss/vite": "^4.0.7",
     "lucide-react": "^0.476.0",
     "react": "^19.0.0",
@@ -17,6 +18,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "tailwindcss": "^4.0.7",
+    "three": "^0.174.0",
     "tone": "^15.0.4"
   },
   "devDependencies": {
